hierarchical material route
