# src/app/models/materialDefinition.ts
@@ -4,4 +4,5 @@ export class MaterialDefinition {
     id: string;
     displayColor: string;
     attributes: Array<{ id: string, name: string }>;
+    children: Array<MaterialDefinition>;
 }
